appId: io.posa
---
- launchApp:
    clearState: true
- waitForAnimationToEnd
- repeat:
    times: 2
    commands:
      - assertVisible:
          id: "breeds:card:top:.*"
      - swipe:
          from:
            id: "breeds:card:top:.*"
          start: 90%, 50%
          end: 10%, 50%
- tapOn:
    id: breeds:topBar:favouritesButton
- waitForAnimationToEnd
- assertVisible: "2"
